syntax = "proto3";

option java_package = "com.bqliang.leavesheet"; // package name for generated java code
option java_multiple_files = true; // generate one .java file per message


message LeaveSheet {
  // 个人信息
  string faculty= 1;
  string major = 2;
  string className = 3;
  string stuId = 4;
  string applicant = 5;
  string phone = 6;

  // 请假信息
  int64 applicationDate = 7;
  string type = 8;
  string reason = 9;
  int64 startTime = 10;
  int64 endTime = 11;
  float durationInDays = 12;

  // 辅导员审核
  string counselor = 13;
  int64 counselorAuditTime = 14;
  string counselorAuditOpinion = 15;

  // 院系办公室审核
  string facultyAuditor = 16;
  int64 facultyAuditTime = 17;
  string facultyAuditOpinion = 18;
}